# Wiki-Quiz

./: .env  .env.example  .replit  README.md  package.json  pyproject.toml
attached_assets/: Pasted--DeepKlarity-Technologies-AI-Wiki-Quiz-Generator-Object_1770294333970.txt
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: AppShell.tsx  DifficultyBadge.tsx  QuizRenderer.tsx  Seo.tsx  StatPill.tsx  ThemeToggle.tsx  WikiQuizDetails.tsx
client/src/hooks/: use-wiki.ts
client/src/pages/: GeneratePage.tsx  HistoryPage.tsx  not-found.tsx
server/: index.ts  routes.ts  storage.ts
shared/: routes.ts  schema.ts
